--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu"
                         aria-controls="mobileMenu" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"
+                                style="color: #fafafa;"></i></span>
                     </button>
 
                     <div class="collapse navbar-collapse justify-content-end">
