3rd section  responsive

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <div class="row gx-lg-5 gx-3 gy-4 p-4 align-items-center">
 
             <!-- Text Section -->
-            <div class="col-lg-7 col-md-6 col-12 " id="about-school">
-                <h1 class="mb-3">About School</h1>
-                <h2 class="mb-3">Our Story</h2>
+            <div class="col-md-6 col-12 minor" id="about-school">
+                <h1>About Cambridge</h1>
+                <h2>Our Story</h2>
                 <p>
                     Cambridge International School Palampur is dedicated to providing quality education that fosters
                     holistic development in students. With a focus on academic excellence, the school offers a wide
@@ -85,11 +85,12 @@
                     International School Palampur, we believe in nurturing not just knowledgeable individuals but also
                     responsible and compassionate citizens.
                 </p>
-                <button><a href="about.html" class="btn">Read more...</a></button>
+                <a href="about.html" class="btn">Read more...</a>
+
             </div>
 
             <!-- Image Section -->
-            <div class="col-lg-5 col-md-6 col-12 text-center major">
+            <div class="col-md-6 col-12 major">
                 <img src="all-media/mainheads.png" class="img-fluid w-100" alt="School Image">
             </div>
 
@@ -105,7 +106,7 @@
                 <div class="first ">
                     <div class="text-center photo "><img src="all-media/chairmenn.jpg"></div>
                     <h2>Chairman</h2>
-                    <button><a href="management.html#chairman" class="btn">Read more...</a></button>
+                    <a href="management.html#chairman" class="btn">Read more...</a>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 col-12 ">
