bg colors adjust

--- a/index.html
+++ b/index.html
@@ -113,21 +113,21 @@
                 <div class="first ">
                     <div class="text-center photo"><img src="all-media/Managing-Director.jpg"></div>
                     <h2>Vice-Chairman</h2>
-                    <button><a href="management.html#vice-chairman" class="btn">Read more...</a></button>
+                    <a href="management.html#vice-chairman" class="btn">Read more...</a>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 col-12 ">
                 <div class="first ">
                     <div class="text-center photo"><img src="all-media/Principall.jpg"></div>
                     <h2>Principal</h2>
-                    <button><a href="management.html#principal" class="btn">Read more...</a></button>
+                    <a href="management.html#principal" class="btn">Read more...</a>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 col-12 ">
                 <div class="first ">
                     <div class="text-center photo"><img src="all-media/directorr.jpg"></div>
                     <h2>Director</h2>
-                    <button><a href="management.html#director" class="btn">Read more...</a></button>
+                    <a href="management.html#director" class="btn">Read more...</a>
                 </div>
             </div>
         </div>
@@ -140,25 +140,25 @@
                 <img src="all-media/infra.png" class="img-fluid">
                 <h2>Infrastructure</h2>
                 <p>amazing infra developed by cambridge</p>
-                <button><a href="infrastructure.html" class="btn">Read more...</a></button>
+                <a href="infrastructure.html" class="btn">Read more...</a>
             </div>
             <div class="col-lg-3 col-sm-6 col-12 pix">
                 <img src="all-media/staff.png" class="img-fluid">
                 <h2>Our staff</h2>
                 <p>cooperative staff and cool environment</p>
-                <button><a href="our-staff.html" class="btn">Read more...</a></button>
+                <a href="our-staff.html" class="btn">Read more...</a>
             </div>
             <div class="col-lg-3 col-sm-6 col-12 pix">
                 <img src="all-media/management.png" class="img-fluid">
                 <h2>Management</h2>
                 <p>Cambridge manage by its own committee</p>
-                <button><a href="management.html" class="btn">Read more...</a></button>
+                <a href="management.html" class="btn">Read more...</a>
             </div>
             <div class="col-lg-3 col-sm-6 col-12 pix">
                 <img src="all-media/student council.png" class="img-fluid">
                 <h2>Student council</h2>
                 <p>Students are have incredible talent about study</p>
-                <button><a href="student-council.html" class="btn">Read more...</a></button>
+                <a href="student-council.html" class="btn">Read more...</a>
             </div>
 
         </div>
