--- a/index.html
+++ b/index.html
@@ -214,37 +214,36 @@
                     <ul class="notification-list" id="notificationList">
                         <!-- Notification items -->
                         <li class="notification-item mb-3">🔔13 April 2025:Admission date for all classes will extend
-                            till 30th april</span></li>
-                        <li class="notification-item mb-3">🔔15 April 2025:last date of paying fees is 15th may</span>
+                            till 30th april</li>
+                        <li class="notification-item mb-3">🔔15 April 2025:last date of paying fees is 15th may
                         </li>
                         <li class="notification-item mb-3">🔔21 April 2025:freshers party are organized on 25 april
-                            2025</span></li>
+                            2025</li>
                         <li class="notification-item mb-3">🔔28 April 2025:quiz competition are held on 30th of
-                            april</span></li>
+                            april</li>
                         <li class="notification-item mb-3">🔔11 may 2025:tomorrow will be holiday on the ocassion of
-                            water day</span></li>
+                            water day</li>
                         <li class="notification-item mb-3">🔔18 may 2025:annual prize distribution function are held on
-                            21 may</span></li>
+                            21 may</li>
                         <li class="notification-item mb-3">🔔21 may 2025:all classes are on holiday due to annual day
-                            are organized</span></li>
+                            are organized</li>
                         <li class="notification-item mb-3">🔔25 may 2025:all school staff meeting are held on 26th of
-                            may</span></li>
+                            may</li>
                         <li class="notification-item mb-3">🔔29 may 2025:debate competition are organized on 30th of
-                            may</span></li>
+                            may</li>
                         <li class="notification-item mb-3">🔔13 july 2025:Parents teachers meeting are held on 15th of
-                            july</span></li>
+                            july</li>
                         <li class="notification-item mb-3">🔔16 july 2025:pre-1 exams are conducted for all classes from
-                            27 july 2025</span></li>
+                            27 july 2025</li>
                         <li class="notification-item mb-3">🔔23 july 2025:seeting plan of the exams and datesheet are
-                            published on notice board</span></li>
-                        <li class="notification-item mb-3">🔔27 july 2025:pre-1 exams are end on 10august 2025</span>
+                            published on notice board</li>
+                        <li class="notification-item mb-3">🔔27 july 2025:pre-1 exams are end on 10august 2025
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!-- last-section footer -->
     <!-- last-section footer -->
     <div class="container-fluid sec-7">
         <div class="row gy-5">
