--- a/index.html
+++ b/index.html
@@ -164,86 +164,62 @@
         </div>
     </div>
     <!-- 6th section -->
-    <div class="container-fluid section-6">
-        <div class="row">
-            <div class="col-lg-6">
-                <form>
-                    <div class="container mt-2 mb-2">
-                        <h2 class="mb-4 text-center fs-1 fw-bold">Contact Us</h2>
-                        <div class="container">
-                            <div class="form-container">
-                                <h2 class="text-center mb-4">Get in Touch</h2>
-                                <form>
-                                    <div class="mb-3">
-                                        <label for="firstName" class="form-label">First Name</label>
-                                        <input type="text" class="form-control" id="firstName"
-                                            placeholder="Enter your first name">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="lastName" class="form-label">Last Name</label>
-                                        <input type="text" class="form-control" id="lastName"
-                                            placeholder="Enter your last name">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="email" class="form-label">Email Address</label>
-                                        <input type="email" class="form-control" id="email"
-                                            placeholder="Enter your email">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="phone" class="form-label">Phone Number</label>
-                                        <input type="tel" class="form-control" id="phone"
-                                            placeholder="Enter your phone number">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="message" class="form-label">Message</label>
-                                        <textarea class="form-control" id="message" rows="4"
-                                            placeholder="Write your message here"></textarea>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary w-100 btn-custom">Send
-                                        Message</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
+    <div class="main-container">
+        <!-- Left Side: Form -->
+        <div class="form-section">
+            <h2>Contact Form</h2>
+            <form>
+                <input type="text" placeholder="Name" required />
+                <input type="email" placeholder="Email" required />
+                <textarea placeholder="Message"></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
 
-            <div class="col-lg-6 mt-2">
-                <h4 class="mb-4 text-center  fs-1 fw-bold">Notifications</h4>
-                <div class="notification-box mx-auto">
-                    <ul class="notification-list" id="notificationList">
-                        <!-- Notification items -->
-                        <li class="notification-item">🔔13 April 2025:Admission date for all classes will extend
-                            till 30th april</li>
-                        <li class="notification-item">🔔15 April 2025:last date of paying fees is 15th may
-                        </li>
-                        <li class="notification-item">🔔21 April 2025:freshers party are organized on 25 april
-                            2025</li>
-                        <li class="notification-item">🔔28 April 2025:quiz competition are held on 30th of
-                            april</li>
-                        <li class="notification-item">🔔11 may 2025:tomorrow will be holiday on the ocassion of
-                            water day</li>
-                        <li class="notification-item">🔔18 may 2025:annual prize distribution function are held on
-                            21 may</li>
-                        <li class="notification-item">🔔21 may 2025:all classes are on holiday due to annual day
-                            are organized</li>
-                        <li class="notification-item">🔔25 may 2025:all school staff meeting are held on 26th of
-                            may</li>
-                        <li class="notification-item">🔔29 may 2025:debate competition are organized on 30th of
-                            may</li>
-                        <li class="notification-item">🔔13 july 2025:Parents teachers meeting are held on 15th of
-                            july</li>
-                        <li class="notification-item">🔔16 july 2025:pre-1 exams are conducted for all classes from
-                            27 july 2025</li>
-                        <li class="notification-item">🔔23 july 2025:seeting plan of the exams and datesheet are
-                            published on notice board</li>
-                        <li class="notification-item ">🔔27 july 2025:pre-1 exams are end on 10august 2025
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <!-- Right Side: Notification -->
+
+        <div class="notification-box">
+            <ul class="notification-list" id="notificationList">
+                <li>🔔15 April 2025:last date of paying fees is 15th may</li>
+                <li>🔔13 April 2025:Admission date for all classes will extendtill 30th april</li>
+                <li>🔔21 April 2025:freshers party are organized on 25 april 2025</li>
+                <li>🔔28 April 2025:quiz competition are held on 30th of april</li>
+                <li>🔔11 may 2025:tomorrow will be holiday on the ocassion of water day</li>
+                <li>🔔18 may 2025:annual prize distribution function are held on
+                    21 may</li>
+                <li>🔔21 may 2025:all classes are on holiday due to annual day
+                    are organized</li>
+                <li>🔔25 may 2025:all school staff meeting are held on 26th of
+                    may</li>
+                <li>🔔29 may 2025:debate competition are organized on 30th of
+                    may</li>
+                <li>🔔13 july 2025:Parents teachers meeting are held on 15th of
+                    july</li>
+                <li>🔔16 july 2025:pre-1 exams are conducted for all classes from
+                    27 july 2025</li>
+                <li>🔔23 july 2025:seeting plan of the exams and datesheet are
+                    published on notice board</li>
+                <li>🔔27 july 2025:pre-1 exams are end on 10 August 2025</li>
+            </ul>
         </div>
     </div>
+
+    <!-- <li class="notification-item"></li>
+                <li class="notification-item">
+                </li>
+                <li class="notification-item"></li>
+                <li class="notification-item"></li>
+                <li class="notification-item">🔔11 may 2025:tomorrow will be holiday on the ocassion of
+                    water day</li>
+                <li class="notification-item"></li>
+                <li class="notification-item"></li>
+                <li class="notification-item"></li>
+                <li class="notification-item"></li>
+                <li class="notification-item"></li>
+                <li class="notification-item"></li>
+                <li class="notification-item"></li>
+                <li class="notification-item ">
+                </li> -->
     <!-- last-section footer -->
     <div class="container-fluid sec-7">
         <div class="row gy-5">
