noti. in 2 lines

--- a/index.html
+++ b/index.html
@@ -181,24 +181,24 @@
         <div class="notification-box">
             <ul class="notification-list" id="notificationList">
                 <li>🔔15 April 2025:last date of paying fees is 15th may</li>
-                <li>🔔13 April 2025:Admission date for all classes will extendtill 30th april</li>
+                <li>🔔13 April 2025:Admission date will extend till 30th april</li>
                 <li>🔔21 April 2025:freshers party are organized on 25 april 2025</li>
                 <li>🔔28 April 2025:quiz competition are held on 30th of april</li>
                 <li>🔔11 may 2025:tomorrow will be holiday on the ocassion of water day</li>
-                <li>🔔18 may 2025:annual prize distribution function are held on
+                <li>🔔18 may 2025:annual function are held on
                     21 may</li>
-                <li>🔔21 may 2025:all classes are on holiday due to annual day
-                    are organized</li>
+                <li>🔔21 may 2025:all classes on holiday due to annual day
+                    organized</li>
                 <li>🔔25 may 2025:all school staff meeting are held on 26th of
                     may</li>
                 <li>🔔29 may 2025:debate competition are organized on 30th of
                     may</li>
                 <li>🔔13 july 2025:Parents teachers meeting are held on 15th of
                     july</li>
-                <li>🔔16 july 2025:pre-1 exams are conducted for all classes from
+                <li>🔔16 july 2025:pre-1 exams held from
                     27 july 2025</li>
-                <li>🔔23 july 2025:seeting plan of the exams and datesheet are
-                    published on notice board</li>
+                <li>🔔23 july 2025:seeting plan and datesheet are
+                    published </li>
                 <li>🔔27 july 2025:pre-1 exams are end on 10 August 2025</li>
             </ul>
         </div>
