edit all footers

--- a/student-council.html
+++ b/student-council.html
@@ -408,8 +408,8 @@
     </div>
     <!-- last-section footer -->
     <div class="container-fluid sec-7">
-        <div class="row gy-5">
-            <div class="col-xl-3 col-sm-6 col-12 link-1">
+        <div class="row gy-3">
+            <div class="col-sm-3  col-6 link-1">
                 <!-- <h1>Important links</h1> -->
                 <ul class="list">
                     <a href="book-list.html">Book-List</a>
@@ -420,7 +420,7 @@
                     <a href="AA.html">Acedmic-Achievements</a>
                 </ul>
             </div>
-            <div class="col-xl-3 col-sm-6 col-12 link-1">
+            <div class="col-sm-3   col-6  link-1">
                 <!-- <h1>other links</h1> -->
                 <ul class="list">
                     <a href="transport.html">Transport </a>
@@ -431,7 +431,7 @@
                     <a href="R&P.html">Rules & policies</a>
                 </ul>
             </div>
-            <div class="col-xl-3 col-sm-6 col-12 link-1">
+            <div class="col-sm-3  col-6  link-1">
                 <!-- <h1>other links</h1> -->
                 <ul class="list">
                     <a href="#">Ministry of Education</a>
@@ -442,11 +442,11 @@
                     <a href="#">CBSE portal</a>
                 </ul>
             </div>
-            <div class="col-xl-3 col-sm-6 col-12 link-1">
+            <div class="col-sm-3  col-6 link-1">
                 <div class="map-container">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3380.2822717167937!2d76.52590917543009!3d32.08865597395878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904b38ad4de1bf1%3A0x53662bc62c2a29ab!2sCambridge%20International%20School!5e0!3m2!1sen!2sin!4v1756272261465!5m2!1sen!2sin"
-                        width="auto" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="auto" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
