--- a/index.html
+++ b/index.html
@@ -171,35 +171,28 @@
             <form>
                 <input type="text" placeholder="Name" required />
                 <input type="email" placeholder="Email" required />
-                <textarea placeholder="Message"></textarea>
+                <textarea placeholder="Message" rows="5" required></textarea>
                 <button type="submit">Submit</button>
             </form>
         </div>
 
         <!-- Right Side: Notification -->
-
         <div class="notification-box">
+            <h3 class="notification-header">📢 Notifications</h3>
             <ul class="notification-list" id="notificationList">
-                <li>🔔15 April 2025:last date of paying fees is 15th may</li>
-                <li>🔔13 April 2025:Admission date will extend till 30th april</li>
-                <li>🔔21 April 2025:freshers party are organized on 25 april 2025</li>
-                <li>🔔28 April 2025:quiz competition are held on 30th of april</li>
-                <li>🔔11 may 2025:tomorrow will be holiday on the ocassion of water day</li>
-                <li>🔔18 may 2025:annual function are held on
-                    21 may</li>
-                <li>🔔21 may 2025:all classes on holiday due to annual day
-                    organized</li>
-                <li>🔔25 may 2025:all school staff meeting are held on 26th of
-                    may</li>
-                <li>🔔29 may 2025:debate competition are organized on 30th of
-                    may</li>
-                <li>🔔13 july 2025:Parents teachers meeting are held on 15th of
-                    july</li>
-                <li>🔔16 july 2025:pre-1 exams held from
-                    27 july 2025</li>
-                <li>🔔23 july 2025:seeting plan and datesheet are
-                    published </li>
-                <li>🔔27 july 2025:pre-1 exams are end on 10 August 2025</li>
+                <li>🔔 15 April 2025: Last date of paying fees is 15th May</li>
+                <li>🔔 13 April 2025: Admission date extended till 30th April</li>
+                <li>🔔 21 April 2025: Freshers party organized on 25 April 2025</li>
+                <li>🔔 28 April 2025: Quiz competition held on 30th April</li>
+                <li>🔔 11 May 2025: Tomorrow is a holiday for Water Day</li>
+                <li>🔔 18 May 2025: Annual function is on 21 May</li>
+                <li>🔔 21 May 2025: All classes off due to Annual Day</li>
+                <li>🔔 25 May 2025: Staff meeting on 26 May</li>
+                <li>🔔 29 May 2025: Debate competition on 30 May</li>
+                <li>🔔 13 July 2025: PTM scheduled on 15 July</li>
+                <li>🔔 16 July 2025: Pre-1 exams start from 27 July</li>
+                <li>🔔 23 July 2025: Seating plan and datesheet published</li>
+                <li>🔔 27 July 2025: Pre-1 exams end on 10 August 2025</li>
             </ul>
         </div>
     </div>
