--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
             <div class="col-12 px-0">
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="#">
-                        <img src="all-media/log.png" alt="Logo" height="40">
+                        <img src="all-media/log.png" alt="Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu"
                         aria-controls="mobileMenu" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"
-                                style="color: #fafafa;"></i></span>
+                        <i class="fa-solid fa-bars"></i>
                     </button>
 
                     <div class="collapse navbar-collapse justify-content-end">
@@ -32,7 +31,7 @@
                             <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
                             <li class="nav-item"><a class="nav-link" href="gallery.html">GALLERY</a></li>
                             <li class="nav-item"><a class="nav-link" href="pay-fee.html">PAY FEE</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pay-fee.html">CONTACT US</a></li>
                         </ul>
                     </div>
                 </nav>
