--- a/index.html
+++ b/index.html
@@ -197,51 +197,51 @@
     </div>
     <!-- last-section footer -->
     <div class="container-fluid sec-7">
-        <div class="row gy-3">
-            <div class="col-sm-3  col-6 link-1">
-                <!-- <h1>Important links</h1> -->
+        <div class="row gy-4">
+            <div class="col-sm-3 col-6">
                 <ul class="list">
-                    <a href="book-list.html">Book-List</a>
-                    <a href="transfer-certificate.html"> Transfer Certificate</a>
-                    <a href="t&c.html">Terms & Conditions</a>
-                    <a href="SMC.html">School managing committee</a>
-                    <a href="student-classwise.html">No. of studnts Classwise</a>
-                    <a href="AA.html">Acedmic-Achievements</a>
+                    <li><a href="book-list.html">Book-List</a></li>
+                    <li><a href="transfer-certificate.html">Transfer Certificate</a></li>
+                    <li><a href="t&c.html">Terms & Conditions</a></li>
+                    <li><a href="SMC.html">School Managing Committee</a></li>
+                    <li><a href="student-classwise.html">No. of Students Classwise</a></li>
+                    <li><a href="AA.html">Academic Achievements</a></li>
                 </ul>
             </div>
-            <div class="col-sm-3   col-6  link-1">
-                <!-- <h1>other links</h1> -->
+
+            <div class="col-sm-3 col-6">
                 <ul class="list">
-                    <a href="transport.html">Transport </a>
-                    <a href="about.html">About cambridge</a>
-                    <a href="time-table.html">Time-table</a>
-                    <a href="streams-offered.html">streams offered</a>
-                    <a href="student-council.html">school Alumini's</a>
-                    <a href="R&P.html">Rules & policies</a>
+                    <li><a href="transport.html">Transport</a></li>
+                    <li><a href="about.html">About Cambridge</a></li>
+                    <li><a href="time-table.html">Time-table</a></li>
+                    <li><a href="streams-offered.html">Streams Offered</a></li>
+                    <li><a href="student-council.html">School Alumni</a></li>
+                    <li><a href="R&P.html">Rules & Policies</a></li>
                 </ul>
             </div>
-            <div class="col-sm-3  col-6  link-1">
-                <!-- <h1>other links</h1> -->
+
+            <div class="col-sm-3 col-6">
                 <ul class="list">
-                    <a href="#">Ministry of Education</a>
-                    <a href="#">Maintained by CBSE</a>
-                    <a href="#">Copyright of cambridge</a>
-                    <a href="#">Hyperlinking policy</a>
-                    <a href="#">Testimonials</a>
-                    <a href="#">CBSE portal</a>
+                    <li><a href="#">Ministry of Education</a></li>
+                    <li><a href="#">Maintained by CBSE</a></li>
+                    <li><a href="#">Copyright of Cambridge</a></li>
+                    <li><a href="#">Hyperlinking Policy</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">CBSE Portal</a></li>
                 </ul>
             </div>
-            <div class="col-sm-3  col-6 link-1">
+
+            <div class="col-sm-3 col-6">
                 <div class="map-container">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3380.2822717167937!2d76.52590917543009!3d32.08865597395878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904b38ad4de1bf1%3A0x53662bc62c2a29ab!2sCambridge%20International%20School!5e0!3m2!1sen!2sin!4v1756272261465!5m2!1sen!2sin"
-                        width="auto" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade" allowfullscreen>
+                    </iframe>
                 </div>
             </div>
-
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 
