--- a/management.html
+++ b/management.html
@@ -64,11 +64,11 @@
             <div class="col-12 px-0">
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="#">
-                        <img src="all-media/log.png" alt="Logo" height="40">
+                        <img src="all-media/log.png" alt="Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu"
                         aria-controls="mobileMenu" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <i class="fa-solid fa-bars"></i>
                     </button>
 
                     <div class="collapse navbar-collapse justify-content-end">
@@ -77,7 +77,7 @@
                             <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
                             <li class="nav-item"><a class="nav-link" href="gallery.html">GALLERY</a></li>
                             <li class="nav-item"><a class="nav-link" href="pay-fee.html">PAY FEE</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pay-fee.html">CONTACT US</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -105,6 +105,7 @@
             </div>
         </div>
     </header>
+
     <!-- content box -->
     <div class="container HEAD">SCHOOL MANAGEMENT</div>
     <div class="container mt-4 ">
